add main readme, modify readme cv1